# deskautomation

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  InstallationLog.txt  MOTOR_CONFIGURATION_SUMMARY.md  README.md  SoftwareArchitecture.md  SoftwareDetailedDesign.md  SoftwareRequirements.md  SoftwareTestCasesSpecification.md  SystemUseCases.md  TraceabilityMatrix.md  cmds.txt  cppcheck-report.xml  cppcheck-summary.txt  delete-me
.github/: copilot-instructions.md
.github/workflows/: cmake-single-platform.yml
00_training_context/: 00_agenda.md  01_hello-world.md  02_aisetup.md  03_prompting-techniques.md  04_00_deskautomation-syseng.md  04_01_00_system-definition.md  04_01_01_system-definition-architecture.md  04_02_software-construction.md  04_03_00_component-verification.md  04_03_01_software_integration-verification.md  04_03_03_system-testing.md  05_traceability-matrix.md  06_workflow-pipelines.md  07_process-assessment.md
00_training_context/resources/: arduino.ino  helloworld.cpp
documentation/: 00_SystemMissionStatement.md  01_MissionStatement.md  01_SystemObjectives.md  02_00_ConceptOfOperations.md  02_00_ConceptOfOperations_Reviews.md  02_01_HARA-prep.md  02_02_HARA-complete.md  02_03_SafetyGoals.md  02_ConceptOfOperations.md  02_SystemObjectives.md  03_00_SystemRequirements.md  03_00_SystemRequirements_Reviews.md  03_01_01_TechnicalSafetyConcept.md  03_01_01_TechnicalSafetyConcept_Reviews.md  03_01_SystemArchitecture.md  03_01_SystemArchitecture_Reviews.md  03_02_RequirementsTraceabilityMatrix.md  03_ConOps.md  03_SystemRequirements.md  04_00_SoftwareRequirements.md  04_00_SoftwareRequirements_Reviews.md  04_01_SoftwareVerificationSpecification.md  04_SoftwareRequirements.md  04_SoftwareRequirements_Reviews.md  04_SystemContextDiagram.md  05_SoftwareArchitecture.md  05_SoftwareArchitecture_Reviews.md  05_SystemUseCases.md  06_00_DetailedDesign.md  06_00_DetailedDesign_Reviews.md  06_01_DetailedDesign_InteractionDiagrams.md  06_DetailedDesign.md  06_SystemRequirements.md  07_MotorDriverConfiguration.md  07_SoftwareRequirements.md  08_SoftwareArchitecture.md  09_SoftwareDetailedDesign.md  10_00_SystemTestSpecification.md  10_00_SystemTestSpecification_Reviews.md  10_01_SystemTestReport.md  (+26 more)
documentation/aspice/: aspice-assessment-ai-prompt.md  aspice-basepractices.md  aspiceassessments.md
documentation/feature-pdrs/: FCR_HeightAdjustment.md  FCR_LimitProtection_ConflictHandling.md  FCR_MotorFaultDetection.md  FCR_NoMotionWithoutValidCommand.md  FCR_SafeResetRecovery.md  FCR_SafetyHalt.md
schematics/schmatics_desk_automation/: #auto_saved_files#  _autosave-schmatics_desk_automation.kicad_pcb  fp-info-cache  fp-lib-table  schmatics_desk_automation.kicad_pcb  schmatics_desk_automation.kicad_prl  schmatics_desk_automation.kicad_pro  schmatics_desk_automation.kicad_sch  sym-lib-table  ~_autosave-schmatics_desk_automation.kicad_pcb.lck
schematics/schmatics_desk_automation/DeskAutomation.pretty/: Elitek-Switch_button.kicad_mod  L298N Interface.kicad_mod  S8211-46R.kicad_mod
schematics/schmatics_desk_automation/DeskAutomation_MotorControl/: motor_controls.kicad_sch  schmatics_no_arduino.kicad_prl  schmatics_no_arduino.kicad_pro  schmatics_no_arduino.kicad_sch
source/arduino/: DeskController.cpp  DeskController.h  HAL.cpp  HAL.h  PinConfig.h  arduino.ino
source/arduino/hal_mock/: HALMock.cpp  HALMock.h  SerialMock.h
source/hal/: IHal.h
source/ikeadeskt_automation/: app.cpp  app.h  ikeadeskt_automation.ino
src/: README.md  desk_app.cpp  desk_app.h  desk_automation.ino  desk_types.h  hal.cpp  hal.h  motor_config.cpp  motor_config.h  motor_controller.cpp  motor_controller.h  pin_config.h  safety_config.h  src.ino
tests/: ComponentTests.cpp  DeskControllerTestInterface.h  IntegrationTests.cpp  README.md  SoftwareTests.cpp  SystemIntegrationTests.cpp  UnitTests.cpp  fetch_cppcheck_addons.sh  pipeline.ps1  run-pipeline.ps1
tests/hal_mock/: SerialMock.cpp  SerialMock.h
toolchain/: ARCHITECTURE.md  README.md  coding_guides_and_checks.md  extract_rule_results.py  pipeline_analysis.py  pipeline_build.py  pipeline_common.py  pipeline_test.py  run-pipeline.py
toolchain/results/: all_rules_summary.md  build_log.txt  cmake_configure.txt  rules_summary.md  static_analysis.txt  static_analysis.xml  test_results_ComponentTests.txt  test_results_IntegrationTests.txt  test_results_MT_BASIC.txt  test_results_MT_ROBUST.txt  test_results_UnitTests.txt
toolchain/rules/: common.py  rule_RULE-001_R1_1_no_goto.py  rule_RULE-002_R1_2_no_setjmp_longjmp.py  rule_RULE-007_R2_3_no_while_true.py  rule_RULE-009_R3_1_no_malloc_free.py  rule_RULE-011_R3_4_stack_limits.py  rule_RULE-012_R4_1_function_length.py  rule_RULE-014_R4_3_complexity.py  rule_RULE-021_R6_2_minimize_globals.py  rule_RULE-023_R6_4_init_at_decl.py  rule_RULE-024_R7_1_unused_return.py  rule_RULE-026_R7_3_null_checks.py  rule_RULE-029_R8_2_no_function_macros.py  rule_RULE-030_R8_3_named_constants.py  rule_RULE-033_R9_2_no_pointer_arith.py  rule_RULE-034_R9_3_no_function_pointers.py  rule_RULE-035_R9_4_no_multilevel_pointers.py  rule_RULE-037_R10_1_compiler_flags.py  rule_RULE-038_R10_2_zero_warnings.py  rule_RULE-039_R10_3_cppcheck_run.py  rule_RULE-040_R10_4_cppcheck_clean.py  rule_RULE-041_R10_5_misra_compliance.py  rule_RULE-047_R13_1_test_coverage.py  rule_RULE-049_MISRA_1_3_cppcheck.py  rule_RULE-049_R14_1_function_length.py  rule_RULE-050_MISRA_2_1_unreachable.py  rule_RULE-050_R14_2_parameter_count.py  rule_RULE-051_MISRA_2_2_dead_code.py  rule_RULE-051_R14_3_nesting_depth.py  rule_RULE-052_R14_4_file_length.py  rule_RULE-053_R14_5_assertion_density.py  rule_RULE-054_MISRA_9_1_uninit.py  rule_RULE-055_MISRA_10_1_types.py  rule_RULE-056_MISRA_10_3_narrowing.py  rule_RULE-058_MISRA_11_3_pointer_cast.py  rule_RULE-058_MISRA_8_3_function_consistency.py  rule_RULE-060_MISRA_13_2_side_effects.py  rule_RULE-062_MISRA_16_3_switch_break.py  rule_RULE-063_MISRA_17_7_return_used.py  rule_RULE-064_MISRA_18_1_pointer_bounds.py  (+5 more)
